syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "shared.proto";

option go_package = "github.com/yash91989201/superfast-delivery-api/common/pb";

message ItemVariant {
  string id = 1;
  string variant_name = 2;
  double relative_price = 3;
  bool relative_pricing = 4;
  double price = 5;
  optional string description = 6;
  string item_id = 7;
}

message ItemAddon {
  string id = 1;
  string addon_name = 2;
  double addon_price = 3;
  optional string description = 4;
  string item_id = 5;
}

message RestaurantMenu {
  string id = 1;
  string menu_name = 2;
  string shop_id = 3;
  repeated MenuItem menu_items = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp deleted_at = 7;
}

message MenuItem {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string menu_id = 5;
  repeated ItemVariant variants = 6;
  repeated ItemAddon addons = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp deleted_at = 10;
}

message RetailCategory {
  string id = 1;
  string category_name = 2;
  string shop_id = 3;
  repeated RetailItem retail_items = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp deleted_at = 7;
}

message RetailItem {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category_id = 5;
  repeated ItemVariant variants = 6;
  repeated ItemAddon addons = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp deleted_at = 10;
}

message MedicineCategory {
  string id = 1;
  string category_name = 2;
  string shop_id = 3;
  repeated MedicineItem medicine_items = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp deleted_at = 7;
}

message MedicineItem {
  string id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string category_id = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  google.protobuf.Timestamp deleted_at = 8;
}

// types for create request
message CreateItemVariantReq {
  string variant_name = 1;
  double relative_price = 2;
  bool relative_pricing = 3;
  double price = 4;
  optional string description = 5;
  string item_id = 6;
}

message CreateItemAddonReq {
  string addon_name = 1;
  double addon_price = 2;
  optional string description = 3;
  string item_id = 4;
}

message CreateRestaurantMenuReq {
  string menu_name = 1;
  string shop_id = 2;
}

message CreateMenuItemReq {
  string name = 1;
  string description = 2;
  double price = 3;
  string menu_id = 4;
}

message CreateRetailCategoryReq {
  string category_name = 1;
  string shop_id = 2;
}

message CreateRetailItemReq {
  string name = 1;
  string description = 2;
  double price = 3;
  string category_id = 4;
}

message CreateMedicineCategoryReq {
  string category_name = 1;
  string shop_id = 2;
}

message CreateMedicineItemReq {
  string name = 1;
  double price = 2;
  string description = 3;
  string category_id = 4;
}

message GetRestaurantMenuReq {
  string id = 1;
}

message ListRestaurantMenuReq {
  string shop_id = 1;
}

message ListRestaurantMenuRes {
  repeated RestaurantMenu restaurant_menu_list = 1;
}

message GetItemVariantReq {
  string id = 1;
}

message GetItemAddonReq {
  string id = 1;
}

message GetItemVariantsReq {
  string item_id = 1;
}

message GetItemVariantsRes {
  repeated ItemVariant variants = 1;
}
message GetItemAddonsReq {
  string item_id = 1;
}
message GetItemAddonsRes {
  repeated ItemAddon addons = 1;
}

message GetRetailCategoryReq {
  string id = 1;
}

message ListRetailCategoryReq {
  string shop_id = 1;
}

message ListRetailCategoryRes {
  repeated RetailCategory retail_category_list = 1;
}

message GetMedicineCategoryReq {
  string id = 1;
}

message ListMedicineCategoryReq {
  string shop_id = 1;
}

message ListMedicineCategoryRes {
  repeated MedicineCategory medicine_category_list = 1;
}

message UpdateItemVariantReq {
  string id = 1;
  optional string variant_name = 2;
  optional double relative_price = 3;
  optional bool relative_pricing = 4;
  optional double price = 5;
  optional string description = 6;
}

message UpdateItemAddonReq {
  string id = 1;
  optional string addon_name = 2;
  optional double addon_price = 3;
  optional string description = 4;
}

message UpdateRestaurantMenuReq {
  string id = 1;
  optional string menu_name = 2;
}

message UpdateMenuItemReq {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional double price = 4;
}

message UpdateRetailCategoryReq {
  string id = 1;
  optional string category_name = 2;
}

message UpdateRetailItemReq {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional double price = 4;
}

message UpdateMedicineCategoryReq {
  string id = 1;
  optional string category_name = 2;
}

message UpdateMedicineItemReq {
  string id = 1;
  optional string name = 2;
  optional double price = 3;
  optional string description = 4;
}

message DeleteItemVariantReq {
  string id = 1;
}

message DeleteItemAddonReq {
  string id = 1;
}

message DeleteRestaurantMenuReq {
  string id = 1;
}

message DeleteMenuItemReq {
  string id = 1;
}

message DeleteRetailCategoryReq {
  string id = 1;
}

message DeleteRetailItemReq {
  string id = 1;
}

message DeleteMedicineCategoryReq {
  string id = 1;
}

message DeleteMedicineItemReq {
  string id = 1;
}

service ProductService {
  rpc CreateItemVariant(CreateItemVariantReq) returns (ItemVariant) {}
  rpc CreateItemAddon(CreateItemAddonReq) returns (ItemAddon) {}

  rpc CreateRestaurantMenu(CreateRestaurantMenuReq) returns (RestaurantMenu) {}
  rpc CreateMenuItem(CreateMenuItemReq) returns (MenuItem) {}

  rpc CreateRetailCategory(CreateRetailCategoryReq) returns (RetailCategory) {}
  rpc CreateRetailItem(CreateRetailItemReq) returns (RetailItem) {}

  rpc CreateMedicineCategory(CreateMedicineCategoryReq) returns (MedicineCategory) {}
  rpc CreateMedicineItem(CreateMedicineItemReq) returns (MedicineItem) {}

  rpc GetItemVariant(GetItemVariantReq) returns (ItemVariant) {}
  rpc GetItemVariants(GetItemVariantsReq) returns (GetItemVariantsRes) {}
  rpc GetItemAddon(GetItemAddonReq) returns (ItemAddon) {}
  rpc GetItemAddons(GetItemAddonsReq) returns (GetItemAddonsRes) {}

  rpc GetRestaurantMenu(GetRestaurantMenuReq) returns (RestaurantMenu) {}
  rpc ListRestaurantMenu(ListRestaurantMenuReq) returns (ListRestaurantMenuRes) {}

  rpc GetRetailCategory(GetRetailCategoryReq) returns (RetailCategory) {}
  rpc ListRetailCategory(ListRetailCategoryReq) returns (ListRetailCategoryRes) {}

  rpc GetMedicineCategory(GetMedicineCategoryReq) returns (MedicineCategory) {}
  rpc ListMedicineCategory(ListMedicineCategoryReq) returns (ListMedicineCategoryRes) {}

  rpc DeleteItemVariant(DeleteItemVariantReq) returns (EmptyRes) {}
  rpc DeleteItemAddon(DeleteItemAddonReq) returns (EmptyRes) {}

  rpc DeleteRestaurantMenu(DeleteRestaurantMenuReq) returns (EmptyRes) {}
  rpc DeleteMenuItem(DeleteMenuItemReq) returns (EmptyRes) {}

  rpc DeleteRetailCategory(DeleteRetailCategoryReq) returns (EmptyRes) {}
  rpc DeleteRetailItem(DeleteRetailItemReq) returns (EmptyRes) {}

  rpc DeleteMedicineCategory(DeleteMedicineCategoryReq) returns (EmptyRes) {}
  rpc DeleteMedicineItem(DeleteMedicineItemReq) returns (EmptyRes) {}
}
